@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,6 +28,7 @@ package java.lang.foreign;
 import jdk.internal.access.JavaLangAccess;
 import jdk.internal.access.SharedSecrets;
 import jdk.internal.foreign.MemorySessionImpl;
+import jdk.internal.foreign.Utils;
 import jdk.internal.javac.PreviewFeature;
 import jdk.internal.loader.BuiltinClassLoader;
 import jdk.internal.loader.NativeLibrary;
@@ -42,35 +43,37 @@ import java.util.Optional;
 import java.util.function.BiFunction;
 
 /**
- * A <em>symbol lookup</em> is an object that may be used to retrieve the address of a symbol in one or more libraries.
+ * A <em>symbol lookup</em> retrieves the address of a symbol in one or more libraries.
  * A symbol is a named entity, such as a function or a global variable.
  * <p>
- * A symbol lookup is created with respect to a particular library (or libraries). Subsequently, the {@link SymbolLookup#lookup(String)}
+ * A symbol lookup is created with respect to a particular library (or libraries). Subsequently, the {@link SymbolLookup#find(String)}
  * method takes the name of a symbol and returns the address of the symbol in that library.
  * <p>
  * The address of a symbol is modelled as a zero-length {@linkplain MemorySegment memory segment}. The segment can be used in different ways:
  * <ul>
- *     <li>It can be passed to a {@link Linker} to create a downcall method handle, which can then be used to call the foreign function at the segment's base address.</li>
- *     <li>It can be passed to an existing {@linkplain Linker#downcallHandle(FunctionDescriptor) downcall method handle}, as an argument to the underlying foreign function.</li>
- *     <li>It can be {@linkplain MemorySegment#set(ValueLayout.OfAddress, long, Addressable) stored} inside another memory segment.</li>
- *     <li>It can be used to dereference memory associated with a global variable (this might require
- *     {@link MemorySegment#ofAddress(MemoryAddress, long, MemorySession) resizing} the segment first).</li>
+ *     <li>It can be passed to a {@link Linker} to create a downcall method handle, which can then be used to call the foreign function at the segment's address.</li>
+ *     <li>It can be passed to an existing {@linkplain Linker#downcallHandle(FunctionDescriptor, Linker.Option...) downcall method handle}, as an argument to the underlying foreign function.</li>
+ *     <li>It can be {@linkplain MemorySegment#set(AddressLayout, long, MemorySegment) stored} inside another memory segment.</li>
+ *     <li>It can be used to access the region of memory backing a global variable (this requires
+ *     {@linkplain MemorySegment#reinterpret(long) resizing} the segment first).</li>
  * </ul>
  *
  * <h2 id="obtaining">Obtaining a symbol lookup</h2>
  *
- * The factory methods {@link #libraryLookup(String, MemorySession)} and {@link #libraryLookup(Path, MemorySession)}
+ * The factory methods {@link #libraryLookup(String, Arena)} and {@link #libraryLookup(Path, Arena)}
  * create a symbol lookup for a library known to the operating system. The library is specified by either its name or a path.
- * The library is loaded if not already loaded. The symbol lookup, which is known as a <em>library lookup</em>, is associated
- * with a {@linkplain  MemorySession memory session}; when the session is {@linkplain MemorySession#close() closed}, the library is unloaded:
+ * The library is loaded if not already loaded. The symbol lookup, which is known as a <em>library lookup</em>, and its
+ * lifetime is controlled by an {@linkplain Arena arena}. For instance, if the provided arena is a
+ * confined arena, the library associated with the symbol lookup is unloaded when the confined arena
+ * is {@linkplain Arena#close() closed}:
  *
- * {@snippet lang=java :
- * try (MemorySession session = MemorySession.openConfined()) {
- *     SymbolLookup libGL = SymbolLookup.libraryLookup("libGL.so"); // libGL.so loaded here
- *     MemorySegment glGetString = libGL.lookup("glGetString").orElseThrow();
+ * {@snippet lang = java:
+ * try (Arena arena = Arena.ofConfined()) {
+ *     SymbolLookup libGL = SymbolLookup.libraryLookup("libGL.so", arena); // libGL.so loaded here
+ *     MemorySegment glGetString = libGL.find("glGetString").orElseThrow();
  *     ...
  * } //  libGL.so unloaded here
- * }
+ *}
  * <p>
  * If a library was previously loaded through JNI, i.e., by {@link System#load(String)}
  * or {@link System#loadLibrary(String)}, then the library was also associated with a particular class loader. The factory
@@ -80,7 +83,7 @@ import java.util.function.BiFunction;
  * System.loadLibrary("GL"); // libGL.so loaded here
  * ...
  * SymbolLookup libGL = SymbolLookup.loaderLookup();
- * MemorySegment glGetString = libGL.lookup("glGetString").orElseThrow();
+ * MemorySegment glGetString = libGL.find("glGetString").orElseThrow();
  * }
  *
  * This symbol lookup, which is known as a <em>loader lookup</em>, is dynamic with respect to the libraries associated
@@ -91,18 +94,18 @@ import java.util.function.BiFunction;
  * by {@link System#load(String)} or {@link System#loadLibrary(String)}. A loader lookup does not expose symbols in libraries
  * that were loaded in the course of creating a library lookup:
  *
- * {@snippet lang=java :
- * libraryLookup("libGL.so", session).lookup("glGetString").isPresent(); // true
- * loaderLookup().lookup("glGetString").isPresent(); // false
- * }
+ * {@snippet lang = java:
+ * libraryLookup("libGL.so", arena).find("glGetString").isPresent(); // true
+ * loaderLookup().find("glGetString").isPresent(); // false
+ *}
  *
  * Note also that a library lookup for library {@code L} exposes symbols in {@code L} even if {@code L} was previously loaded
  * through JNI (the association with a class loader is immaterial to the library lookup):
  *
- * {@snippet lang=java :
+ * {@snippet lang = java:
  * System.loadLibrary("GL"); // libGL.so loaded here
- * libraryLookup("libGL.so", session).lookup("glGetString").isPresent(); // true
- * }
+ * libraryLookup("libGL.so", arena).find("glGetString").isPresent(); // true
+ *}
  *
  * <p>
  * Finally, each {@link Linker} provides a symbol lookup for libraries that are commonly used on the OS and processor
@@ -110,11 +113,13 @@ import java.util.function.BiFunction;
  * helps clients to quickly find addresses of well-known symbols. For example, a {@link Linker} for Linux/x64 might choose to
  * expose symbols in {@code libc} through the default lookup:
  *
- * {@snippet lang=java :
+ * {@snippet lang = java:
  * Linker nativeLinker = Linker.nativeLinker();
  * SymbolLookup stdlib = nativeLinker.defaultLookup();
- * MemorySegment malloc = stdlib.lookup("malloc").orElseThrow();
- * }
+ * MemorySegment malloc = stdlib.find("malloc").orElseThrow();
+ *}
+ *
+ * @since 19
  */
 @PreviewFeature(feature=PreviewFeature.Feature.FOREIGN)
 @FunctionalInterface
@@ -123,9 +128,31 @@ public interface SymbolLookup {
     /**
      * Returns the address of the symbol with the given name.
      * @param name the symbol name.
-     * @return a zero-length memory segment whose base address indicates the address of the symbol, if found.
+     * @return a zero-length memory segment whose address indicates the address of the symbol, if found.
      */
-    Optional<MemorySegment> lookup(String name);
+    Optional<MemorySegment> find(String name);
+
+    /**
+     * {@return a composed symbol lookup that returns result of finding the symbol with this lookup if found,
+     * otherwise returns the result of finding the symbol with the other lookup}
+     *
+     * @apiNote This method could be used to chain multiple symbol lookups together, e.g. so that symbols could
+     * be retrieved, in order, from multiple libraries:
+     * {@snippet lang = java:
+     * var lookup = SymbolLookup.libraryLookup("foo", arena)
+     *         .or(SymbolLookup.libraryLookup("bar", arena))
+     *         .or(SymbolLookup.loaderLookup());
+     *}
+     * The above code creates a symbol lookup that first searches for symbols in the "foo" library. If no symbol is found
+     * in "foo" then "bar" is searched. Finally, if a symbol is not found in neither "foo" nor "bar", the {@linkplain
+     * SymbolLookup#loaderLookup() loader lookup} is used.
+     *
+     * @param other the symbol lookup that should be used to look for symbols not found in this lookup.
+     */
+    default SymbolLookup or(SymbolLookup other) {
+        Objects.requireNonNull(other);
+        return name -> find(name).or(() -> other.find(name));
+    }
 
     /**
      * Returns a symbol lookup for symbols in the libraries associated with the caller's class loader.
@@ -139,9 +166,10 @@ public interface SymbolLookup {
      * <p>
      * Libraries associated with a class loader are unloaded when the class loader becomes
      * <a href="../../../java/lang/ref/package.html#reachability">unreachable</a>. The symbol lookup
-     * returned by this method is backed by a {@linkplain MemorySession#asNonCloseable() non-closeable}, shared memory
-     * session which keeps the caller's class loader reachable. Therefore, libraries associated with the caller's class
-     * loader are kept loaded (and their symbols available) as long as a loader lookup for that class loader is reachable.
+     * returned by this method is associated with a fresh {@linkplain MemorySegment.Scope scope} which keeps the caller's
+     * class loader reachable. Therefore, libraries associated with the caller's class loader are kept loaded
+     * (and their symbols available) as long as a loader lookup for that class loader, or any of the segments
+     * obtained by it, is reachable.
      * <p>
      * In cases where this method is called from a context where there is no caller frame on the stack
      * (e.g. when called directly from a JNI attached thread), the caller's class loader defaults to the
@@ -158,51 +186,66 @@ public interface SymbolLookup {
         ClassLoader loader = caller != null ?
                 caller.getClassLoader() :
                 ClassLoader.getSystemClassLoader();
-        MemorySession loaderSession = (loader == null || loader instanceof BuiltinClassLoader) ?
-                MemorySession.global() : // builtin loaders never go away
-                MemorySessionImpl.heapSession(loader);
+        Arena loaderArena;// builtin loaders never go away
+        if ((loader == null || loader instanceof BuiltinClassLoader)) {
+            loaderArena = Arena.global();
+        } else {
+            MemorySessionImpl session = MemorySessionImpl.heapSession(loader);
+            loaderArena = session.asArena();
+        }
         return name -> {
             Objects.requireNonNull(name);
+            if (Utils.containsNullChars(name)) return Optional.empty();
             JavaLangAccess javaLangAccess = SharedSecrets.getJavaLangAccess();
             // note: ClassLoader::findNative supports a null loader
-            MemoryAddress addr = MemoryAddress.ofLong(javaLangAccess.findNative(loader, name));
-            return addr == MemoryAddress.NULL ?
+            long addr = javaLangAccess.findNative(loader, name);
+            return addr == 0L ?
                     Optional.empty() :
-                    Optional.of(MemorySegment.ofAddress(addr, 0L, loaderSession));
+                    Optional.of(MemorySegment.ofAddress(addr)
+                                    .reinterpret(loaderArena, null));
         };
     }
 
     /**
      * Loads a library with the given name (if not already loaded) and creates a symbol lookup for symbols in that library.
-     * The library will be unloaded when the provided memory session is {@linkplain MemorySession#close() closed},
-     * if no other library lookup is still using it.
-     * @implNote The process of resolving a library name is OS-specific. For instance, in a POSIX-compliant OS,
-     * the library name is resolved according to the specification of the {@code dlopen} function for that OS.
-     * In Windows, the library name is resolved according to the specification of the {@code LoadLibrary} function.
+     * The lifetime of the returned library lookup is controlled by the provided arena.
+     * For instance, if the provided arena is a confined arena, the library
+     * associated with the returned lookup will be unloaded when the provided confined arena is
+     * {@linkplain Arena#close() closed}.
      * <p>
      * This method is <a href="package-summary.html#restricted"><em>restricted</em></a>.
      * Restricted methods are unsafe, and, if used incorrectly, their use might crash
      * the JVM or, worse, silently result in memory corruption. Thus, clients should refrain from depending on
      * restricted methods, and use safe and supported functionalities, where possible.
      *
+     * @implNote The process of resolving a library name is OS-specific. For instance, in a POSIX-compliant OS,
+     * the library name is resolved according to the specification of the {@code dlopen} function for that OS.
+     * In Windows, the library name is resolved according to the specification of the {@code LoadLibrary} function.
+     *
      * @param name the name of the library in which symbols should be looked up.
-     * @param session the memory session which controls the library lifecycle.
+     * @param arena the arena associated with symbols obtained from the returned lookup.
      * @return a new symbol lookup suitable to find symbols in a library with the given name.
+     * @throws IllegalStateException if {@code arena.scope().isAlive() == false}
+     * @throws WrongThreadException if {@code arena} is a confined arena, and this method is called from a
+     * thread {@code T}, other than the arena's owner thread.
      * @throws IllegalArgumentException if {@code name} does not identify a valid library.
-     * @throws IllegalCallerException if access to this method occurs from a module {@code M} and the command line option
-     * {@code --enable-native-access} is either absent, or does not mention the module name {@code M}, or
-     * {@code ALL-UNNAMED} in case {@code M} is an unnamed module.
+     * @throws IllegalCallerException If the caller is in a module that does not have native access enabled.
      */
     @CallerSensitive
-    static SymbolLookup libraryLookup(String name, MemorySession session) {
+    static SymbolLookup libraryLookup(String name, Arena arena) {
         Reflection.ensureNativeAccess(Reflection.getCallerClass(), SymbolLookup.class, "libraryLookup");
-        return libraryLookup(name, RawNativeLibraries::load, session);
+        if (Utils.containsNullChars(name)) {
+            throw new IllegalArgumentException("Cannot open library: " + name);
+        }
+        return libraryLookup(name, RawNativeLibraries::load, arena);
     }
 
     /**
      * Loads a library from the given path (if not already loaded) and creates a symbol lookup for symbols
-     * in that library. The library will be unloaded when the provided memory session is {@linkplain MemorySession#close() closed},
-     * if no other library lookup is still using it.
+     * in that library. The lifetime of the returned library lookup is controlled by the provided arena.
+     * For instance, if the provided arena is a confined arena, the library
+     * associated with the returned lookup will be unloaded when the provided confined arena is
+     * {@linkplain Arena#close() closed}.
      * <p>
      * This method is <a href="package-summary.html#restricted"><em>restricted</em></a>.
      * Restricted methods are unsafe, and, if used incorrectly, their use might crash
@@ -212,30 +255,31 @@ public interface SymbolLookup {
      * @implNote On Linux, the functionalities provided by this factory method and the returned symbol lookup are
      * implemented using the {@code dlopen}, {@code dlsym} and {@code dlclose} functions.
      * @param path the path of the library in which symbols should be looked up.
-     * @param session the memory session which controls the library lifecycle.
+     * @param arena the arena associated with symbols obtained from the returned lookup.
      * @return a new symbol lookup suitable to find symbols in a library with the given path.
+     * @throws IllegalStateException if {@code arena.scope().isAlive() == false}
+     * @throws WrongThreadException if {@code arena} is a confined arena, and this method is called from a
+     * thread {@code T}, other than the arena's owner thread.
      * @throws IllegalArgumentException if {@code path} does not point to a valid library.
-     * @throws IllegalCallerException if access to this method occurs from a module {@code M} and the command line option
-     * {@code --enable-native-access} is either absent, or does not mention the module name {@code M}, or
-     * {@code ALL-UNNAMED} in case {@code M} is an unnamed module.
+     * @throws IllegalCallerException If the caller is in a module that does not have native access enabled.
      */
     @CallerSensitive
-    static SymbolLookup libraryLookup(Path path, MemorySession session) {
+    static SymbolLookup libraryLookup(Path path, Arena arena) {
         Reflection.ensureNativeAccess(Reflection.getCallerClass(), SymbolLookup.class, "libraryLookup");
-        return libraryLookup(path, RawNativeLibraries::load, session);
+        return libraryLookup(path, RawNativeLibraries::load, arena);
     }
 
-    private static <Z> SymbolLookup libraryLookup(Z libDesc, BiFunction<RawNativeLibraries, Z, NativeLibrary> loadLibraryFunc, MemorySession session) {
+    private static <Z> SymbolLookup libraryLookup(Z libDesc, BiFunction<RawNativeLibraries, Z, NativeLibrary> loadLibraryFunc, Arena libArena) {
         Objects.requireNonNull(libDesc);
-        Objects.requireNonNull(session);
+        Objects.requireNonNull(libArena);
         // attempt to load native library from path or name
         RawNativeLibraries nativeLibraries = RawNativeLibraries.newInstance(MethodHandles.lookup());
         NativeLibrary library = loadLibraryFunc.apply(nativeLibraries, libDesc);
         if (library == null) {
             throw new IllegalArgumentException("Cannot open library: " + libDesc);
         }
-        // register hook to unload library when session is closed
-        MemorySessionImpl.toSessionImpl(session).addOrCleanupIfFail(new MemorySessionImpl.ResourceList.ResourceCleanup() {
+        // register hook to unload library when 'libScope' becomes not alive
+        MemorySessionImpl.toMemorySession(libArena).addOrCleanupIfFail(new MemorySessionImpl.ResourceList.ResourceCleanup() {
             @Override
             public void cleanup() {
                 nativeLibraries.unload(library);
@@ -243,10 +287,12 @@ public interface SymbolLookup {
         });
         return name -> {
             Objects.requireNonNull(name);
-            MemoryAddress addr = MemoryAddress.ofLong(library.find(name));
-            return addr == MemoryAddress.NULL
-                    ? Optional.empty() :
-                    Optional.of(MemorySegment.ofAddress(addr, 0L, session));
+            if (Utils.containsNullChars(name)) return Optional.empty();
+            long addr = library.find(name);
+            return addr == 0L ?
+                    Optional.empty() :
+                    Optional.of(MemorySegment.ofAddress(addr)
+                            .reinterpret(libArena, null));
         };
     }
 }
